# mtt.engineer

./: .gitignore  CLAUDE.md  Dockerfile  README.md  architecture.excalidraw  check_website.sh  cspell.json  package.json
.claude/skills/review-blog-post/: SKILL.md
server/: Cargo.toml
server/src/: main.rs
src/: resume.json
src/layouts/: BaseLayout.astro
src/pages/: about.astro  index.astro
src/pages/about/: cv.json.ts
src/styles/: tailwind.css
website/: .prettierrc.mjs  astro.config.ts  cspell.json  package.json
website/public/: robots.txt
website/scripts/: build-cv-pdf.tsx
website/src/: content.config.ts  resume.json
website/src/content/posts/: hosting-my-website-on-a-rpi.md  hosting-my-website-on-a-rpi.mdx  how-i-use-tailscale.md  reverse-engineer-alarm-with-claude.mdx  serving-content-for-agents.mdx  tailscale-as-a-personal-vpn.md  tailscale-as-a-personal-vpn.mdx  video-editing-pipeline.mdx
website/src/layouts/: BaseLayout.astro  BlogPage.astro
website/src/lib/: og.ts
website/src/pages/: cv.astro  cv.json.ts  cv.md.ts  index.astro  index.md.ts
website/src/pages/og/: [post].png.ts
website/src/pages/posts/: [post].astro  [post].md.ts
website/src/styles/: cv.css  tailwind.css
