[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-server = "0.7.1"
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
