[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-server = "0.7.3"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
